@@ -1,8 +1,16 @@
+#! /bin/bash
+set -e
+
+cd ${CYBER_DOJO_SANDBOX}
 
 CLASSES=.:`ls /mockito/*.jar | tr '\n' ':'`
-javac -Xlint:unchecked -cp $CLASSES  *.java
-if [ $? -eq 0 ]; then
-  # run test classes even if they are inner classes
-  java -cp $CLASSES org.junit.runner.JUnitCore \
-    `ls -1 *Test*.class | grep -v '\\$' | sed 's/\(.*\)\..*/\1/'`
+
+if javac --enable-preview --release 14 -Xlint:preview -Xlint:unchecked -Xlint:deprecation -cp $CLASSES *.java; then
+  java --enable-preview -jar /mockito/junit-platform-console-standalone-1.6.2.jar \
+      --disable-banner \
+      --disable-ansi-colors \
+      --details=tree \
+      --details-theme=ascii \
+      --class-path .:$CLASSES \
+      --scan-class-path
 fi
